--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,8 +1,8 @@
 body {
 	background: url("../images/leota.jpg");
-	font-size: 18px;
+	font-size: 22px;
 	line-height: 34px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: 'Times', Times New Roman, serif;
 	color: #fff;
 }
 
@@ -11,30 +11,28 @@ body {
 }
 
 
-    <div id="game">
-        <h1>The Psychic Game</h1>
-        <p>Guess what letter I'm thinking of!</p>
-        <p>Total Wins: </p>
-        <p>Total Losses: </p>
-        <p>Guesses Left: </p>
-        <p>Your Guesses so far: </p>
-    </div>
-/*general*/
-
-
-h1, p {
+p {
 	margin-bottom: 20px;
+  text-align: left;
 }
-h1{
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-weight: 700;
-}
+
+
 h1 {
-	font-size: 30px;
+	font-family: 'Courier New', Lucida Console, monospace;
+	font-weight: 700;
+  text-align: center;
+	font-size: 50px;
 	line-height: 49px;
 	border-bottom: 3px solid #ddd;
 	padding-bottom: 20px;
 }
+
+h3 {
+  font-weight: bold;
+  text-align: center;
+}
+
+
 div{
 	margin: 20px;
 	padding: 10px;
